# vrski

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  GUIDE.md  HARD_MODE.md  INTEGRATIONS.md  LICENSE  README.md  RECIPES.md  VRSKIAGENT.md  pyproject.toml  requirements.txt  vrski_mcp_config.json
eval/: README.md  golden_flows.py  run_eval.py  run_recipe.py
plans/: ROADMAP.md  phase-0-baseline.md  phase-1-trustworthy-spine.md  phase-2-identity-and-login.md  phase-3-trust-and-control.md  phase-4-vertical-food-delivery.md  phase-5-more-verticals.md  phase-6-concurrency-scale.md  phase-7-adoption-ecosystem.md
scripts/: check_deps.sh  login.sh  publish.sh  reset_session.sh  setup_avd.sh  start_vrski.sh
tests/: test_api.py  test_control.py  test_mcp.py  test_playstore.py  test_recipes.py  test_ui.py  test_walls.py
vrski/: __init__.py  control.py  credentials.py  recipes.py  walls.py
vrski/adb/: __init__.py  client.py
vrski/api/: __init__.py  main.py
vrski/api/routes/: __init__.py  actions.py  apps.py  control.py  screen.py  session.py  setup.py
vrski/emulator/: config.py  manager.py
vrski/mcp/: __init__.py  http_client.py  server.py
vrski/playstore/: __init__.py  auth.py  installer.py  shell_auth.py
vrski/session/: __init__.py  db.py  manager.py  models.py
vrski/ui/: __init__.py  actions.py  driver.py  element.py  finder.py  tree.py
vrski/utils/: logging.py  retry.py
