[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrski"
version = "0.1.0"
description = "Agent-native Android runtime — give your AI agent a real phone via MCP. Reads the UI as JSON, acts by element. No screenshots, no vision model."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai-agents", "android", "mcp", "hermes", "automation", "uiautomator", "accessibility"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vrski*"]

[project.scripts]
vrski-api = "vrski.api.main:run"
vrski-mcp = "vrski.mcp.server:run"
